--- a/index.html
+++ b/index.html
@@ -144,11 +144,13 @@
 		document.getElementById("taxAsPerNR_r").innerHTML =":	"+document.getElementById("taxAsPerNR").value;
 		document.getElementById("educationcessNR_r").innerHTML =":	"+document.getElementById("educationcessNR").value;
 		document.getElementById("totalNR_r").innerHTML =":	"+document.getElementById("totalNR").value;
-		window.print();
 		setTimeout(function(){
-		document.getElementById("main").style.display = 'block';
-		document.getElementById("report").style.display = 'none';
-		}, 10);
+			window.print();
+			setTimeout(function(){
+			document.getElementById("main").style.display = 'block';
+			document.getElementById("report").style.display = 'none';
+			}, 500);
+		}, 500);
 		
 	}
 	
